sidu-installer (0.6-1) unstable; urgency=low

  * gdisk can be started
  * usb-installer can be started

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 23:51:25 +0100

sidu-installer (0.5-2) unstable; urgency=low

  * Workaround for Midori: blocking page wait after reaching page ready.

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 18:57:37 +0100

sidu-installer (0.5-1) unstable; urgency=low

  * The output of the fll-installer is appended to the ready page
  * Debugging: trace can be controlled by the webserver

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 17:23:57 +0100

sidu-installer (0.4-3) unstable; urgency=low

  * Customized text while fll-installer is running.

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 12:58:40 +0100

sidu-installer (0.4-2) unstable; urgency=low

  * No "back" button in ready page

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 12:13:37 +0100

sidu-installer (0.4-1) unstable; urgency=low

  * New frontend plugin: readypage.php
  * New backend plugin: reboot.sh
  * New positions of the buttons "back" and "next" 

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 11:28:56 +0100

sidu-installer (0.3-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * changes to the textphrases and fixed typos

 -- Ferdinand Thommes <devil@siduction.org>  Sun, 13 Nov 2011 08:34:39 +0100

sidu-installer (0.3-1) unstable; urgency=low

  * Root partitions will be filtered (size, no swap). 
  * Fix: index access on default values, if none is defined.
  * No default root partition (too dangerous). Error message if not choosen.

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sun, 13 Nov 2011 00:50:36 +0100

sidu-installer (0.2-2) unstable; urgency=low

  * Fix: partition devices without digits corrupt the output
  * Debug code in partinfo.pl

 -- Hamatoma <siduction@hm.f-r-e-i.de>  Sat, 12 Nov 2011 22:31:26 +0100

sidu-installer (0.2-1.1) unstable; urgency=low

  * Non-maintainer upload.